--- a/package.json
+++ b/package.json
@@ -4,25 +4,30 @@
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
    "devDependencies": {
+      "@types/bcrypt": "^5.0.1",
+      "@types/cors": "^2.8.15",
       "@types/express": "^4.17.20",
+      "@types/jsonwebtoken": "^9.0.4",
       "@types/node": "^16.11.10",
       "nodemon": "^3.0.1",
       "ts-node": "10.7.0",
       "typescript": "4.5.2"
    },
    "dependencies": {
+      "bcrypt": "^5.1.1",
+      "cors": "^2.8.5",
       "express": "^4.18.2",
       "joi": "^17.11.0",
+      "jsonwebtoken": "^9.0.2",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
-      "typeorm": "0.3.17",
-      "migration:generate": "npx typeorm ts-node-commonjs migration:generate -d src/data-source.ts database/migration/MigrationFile",
-      "migration:up" : "npx typeorm ts-node-commonjs migration:run -d src/data-source.ts",
-      "migration:down" : "npx typeorm ts-node-commonjs migration:revert -d src/data-source.ts"
-
+      "typeorm": "0.3.17"
    },
    "scripts": {
       "start": "nodemon --exec ts-node src/index.ts",
-      "typeorm": "typeorm-ts-node-commonjs"
+      "typeorm": "typeorm-ts-node-commonjs",
+      "migration:generate": "npx typeorm ts-node-commonjs migration:generate -d src/data-source.ts database/migration/MigrationFile",
+      "migration:up": "npx typeorm ts-node-commonjs migration:run -d src/data-source.ts",
+      "migration:down": "npx typeorm ts-node-commonjs migration:revert -d src/data-source.ts"
    }
 }
